# Diplomova_prace

./: Příloha A.cpp  Příloha B.txt  README.md  README.txt
Příloha C/: CMakeLists.txt  install_deps_jetson.sh  readme.txt
Příloha C/config/: config.yaml
Příloha C/include/: lidar_masking.hpp  mavlink_bridge.hpp  slam_odometry.hpp  tf_utils.hpp  watchdog.hpp
Příloha C/src/: lidar_masking.cpp  main.cpp  mavlink_bridge.cpp  slam_odometry.cpp  tf_utils.cpp  watchdog.cpp
